Se creó con Colab

--- a/Clase05/03_estructuras_de_datos_parte2.ipynb
+++ b/Clase05/03_estructuras_de_datos_parte2.ipynb
@@ -65,7 +65,6 @@
       "cell_type": "markdown",
       "source": [
         "## 1. Diccionarios\n",
-        "\n",
         "**Concepto:**\n",
         "\n",
         "Un diccionario es una estructura de datos que almacena pares clave-valor. Las claves deben ser únicas y se utilizan para acceder a los valores asociados."
@@ -76,36 +75,42 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "user_input ={'nombre': \"Eros\" ,\n",
+        " 'edad': 31 ,\n",
+        " 'Apellido': 'Aranibar' ,\n",
+        " 'Hobbies' : \"High Performance\"\n",
+        "}"
+      ],
       "metadata": {
         "id": "nHfEQ0jVyYLb"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "{'nombre':'Eros'}.keys()"
+        "user_input.keys()  #Retorna las keys del diccionario."
       ],
       "metadata": {
         "id": "bSX7xek_yEO0",
-        "outputId": "445f7d97-7668-4e37-e280-eac46121322f",
+        "outputId": "dbf59e12-c327-4ffd-ca16-5dc06985a803",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "dict_keys(['nombre'])"
+              "dict_keys(['nombre', 'edad', 'Apellido', 'Hobbies'])"
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 5
         }
       ]
     },
@@ -123,26 +128,53 @@
       "source": [
         "# Crear un diccionario\n",
         "persona = {'nombre': 'Ana', 'edad': 30, 'ciudad': 'Lima'}\n",
-        "print(persona)"
+        "print(persona) #Imprimiendo el diccionario"
       ],
       "metadata": {
-        "id": "P-TTXZxuuRe7"
+        "id": "P-TTXZxuuRe7",
+        "outputId": "3e1725a0-09c3-42f9-efeb-8440c0b65c60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'nombre': 'Ana', 'edad': 30, 'ciudad': 'Lima'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Acceder a un valor\n",
         "print(\"Nombre:\", persona['nombre'])\n",
-        "print(\"Ciudad:\", persona.get('ciudad'))\n"
+        "print(\"Ciudad:\", persona.get('ciudad'))\n",
+        "print('Edad:', persona['edad'])"
       ],
       "metadata": {
-        "id": "tPRrAukRuS1S"
+        "id": "tPRrAukRuS1S",
+        "outputId": "415fb0e4-993a-4cea-b131-b4eb9452718d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nombre: Ana\n",
+            "Ciudad: Lima\n",
+            "Edad: 30\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -150,27 +182,59 @@
         "\n",
         "# Añadir un nuevo par clave-valor\n",
         "persona['profesion'] = 'Ingeniera'\n",
+        "persona['EstatusSocial'] = 'Soltera'\n",
+        "persona['Educación'] = 'Bachier Culminado'\n",
+        "\n",
+        "\n",
         "print(persona)\n",
         "\n"
       ],
       "metadata": {
-        "id": "Ineeezk6uUjd"
+        "id": "Ineeezk6uUjd",
+        "outputId": "0cfb4f81-22c0-442c-d1fb-e4220702844a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'nombre': 'Ana', 'edad': 30, 'profesion': 'Ingeniera', 'EstatusSocial': 'Soltera', 'Educación': 'Bachier Culminado'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Eliminar un par clave-valor\n",
-        "del persona['ciudad']\n",
+        "persona.keys()\n",
+        "del persona['Educación']\n",
+        "\n",
+        "\n",
+        "\n",
         "print(persona)"
       ],
       "metadata": {
-        "id": "tuA4FSZNuVv1"
+        "id": "tuA4FSZNuVv1",
+        "outputId": "7673be55-e2ed-4e0d-fdf4-9933f49ea65f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'nombre': 'Ana', 'edad': 30, 'profesion': 'Ingeniera', 'EstatusSocial': 'Soltera'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -188,35 +252,77 @@
         "print(persona.keys())\n"
       ],
       "metadata": {
-        "id": "0BNmkeBXua1R"
+        "id": "0BNmkeBXua1R",
+        "outputId": "f9b54c3f-cff2-40ee-fdbe-335acba51a5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dict_keys(['nombre', 'edad', 'profesion', 'EstatusSocial'])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Obtener todos los valores\n",
-        "print(persona.values())\n"
+        "print(persona.values())\n",
+        "print(user_input.values())"
       ],
       "metadata": {
-        "id": "67-6NfYiubwM"
+        "id": "67-6NfYiubwM",
+        "outputId": "f7ad1ef8-ee85-4535-ee0b-6734acc060b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dict_values(['Ana', 30, 'Ingeniera', 'Soltera'])\n",
+            "dict_values(['Eros', 31, 'Aranibar', 'High Performance'])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Comprobar si una clave existe en el diccionario\n",
-        "if 'edad' in persona:\n",
-        "    print(\"La clave 'edad' está en el diccionario.\")\n"
+        "print(persona.keys())\n",
+        "if 'profesion' in persona:\n",
+        "    print(\"La clave 'profesion' está en el diccionario.\")\n",
+        "else:\n",
+        "    print(\"No existe educación\")"
       ],
       "metadata": {
-        "id": "UPfEsSI_ucnd"
+        "id": "UPfEsSI_ucnd",
+        "outputId": "61912fca-8785-418e-ac78-3acc2b7895da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dict_keys(['nombre', 'edad', 'profesion', 'EstatusSocial'])\n",
+            "La clave 'profesion' está en el diccionario.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -255,7 +361,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,7 +425,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
