Se creó con Colab

--- a/Clase04/estructuras_repetitivas.ipynb
+++ b/Clase04/estructuras_repetitivas.ipynb
@@ -132,12 +132,59 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# There is one condition , showcase number from 1 to user_number.\n",
+        "# While structure will be enough\n",
+        "\n",
+        "user_number = int(input(\"Write a number : \"))\n",
+        "counter = 1\n",
+        "while counter <= user_number :\n",
+        "  print(counter)\n",
+        "  counter+= 1\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "yiIKKpaO6nfb"
+        "id": "yiIKKpaO6nfb",
+        "outputId": "e0b57833-f73c-4732-d183-75469c5a7679",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Write a number : 20\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n",
+            "20\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -153,12 +200,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Objective : Ask for a number until the accumulation is 100.\n",
+        "\n",
+        "counter = 0\n",
+        "while counter <= 100 :\n",
+        "  number_input = int(input(\"Insert a number please: \"))\n",
+        "  counter = counter + number_input\n",
+        "  print(counter)"
+      ],
       "metadata": {
-        "id": "unv7_Rev6w36"
+        "id": "unv7_Rev6w36",
+        "outputId": "e431643c-1460-4bb5-df42-d1be9c134aec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Insert a number please: 20\n",
+            "20\n",
+            "Insert a number please: 30\n",
+            "50\n",
+            "Insert a number please: 10\n",
+            "60\n",
+            "Insert a number please: 50\n",
+            "110\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -198,10 +272,27 @@
         "print(\"Programa terminado.\")"
       ],
       "metadata": {
-        "id": "9AXqylJZ67KJ"
+        "id": "9AXqylJZ67KJ",
+        "outputId": "f0ee31ba-be03-4088-b99d-17ddc6e4b43c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Escribe 'salir' para terminar: No\n",
+            "Ingresaste: No\n",
+            "Escribe 'salir' para terminar: salida\n",
+            "Ingresaste: salida\n",
+            "Escribe 'salir' para terminar: SALIR\n",
+            "Programa terminado.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -216,12 +307,46 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Objective: 1. Sum numbers until user write \"end\"\n",
+        "# Use loop while, it must complete until the user write fin instead of a number.\n",
+        "# Use a counter to store information.\n",
+        "\n",
+        "close_program = ''\n",
+        "counter_one = 0\n",
+        "while close_program != 'fin' :\n",
+        "    number_user = input(\"Write a number please or write 'fin' to close the program : \")\n",
+        "    if number_user.lower() == 'fin' :\n",
+        "      close_program = 'fin'\n",
+        "    else:\n",
+        "      counter_one+= int(number_user)\n",
+        "\n",
+        "print( f'The final number is : {counter_one} ')\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "ZU5tnAfm7Bzt"
+        "id": "ZU5tnAfm7Bzt",
+        "outputId": "3881772c-1773-47f3-c09f-20c280175389",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Write a number please or write 'fin' to close the program : 10\n",
+            "Write a number please or write 'fin' to close the program : 20\n",
+            "Write a number please or write 'fin' to close the program : 50\n",
+            "Write a number please or write 'fin' to close the program : fin\n",
+            "The final number is :80 \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -236,12 +361,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Objective : Show a menu options\n",
+        "# Constraint : Select exit , the program is over.\n",
+        "\n",
+        "flag = True # Control de the initial state of the program which is open.\n",
+        "\n",
+        "while flag :\n",
+        "  print (f\"Welcome to option menu\")\n",
+        "  print (f\"1. Menu\")\n",
+        "  print (f\"2. Join\")\n",
+        "  print (f\"3. Exit\")\n",
+        "  exit_program = input( f\" Please write of the 3 options : \")\n",
+        "  if exit_program.lower() == \"exit\" :\n",
+        "    flag = False\n",
+        "\n",
+        "print (\"The program is over\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "EHTPcxGJ7H22"
+        "id": "EHTPcxGJ7H22",
+        "outputId": "7d32a61c-58f0-4cf2-d214-d05b1380da3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Welcome to option menu\n",
+            "1. Menu\n",
+            "2. Join\n",
+            "3. Exit\n",
+            " Please write of the 3 options : 1\n",
+            "Welcome to option menu\n",
+            "1. Menu\n",
+            "2. Join\n",
+            "3. Exit\n",
+            " Please write of the 3 options : exit\n",
+            "The program is over\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -299,12 +466,48 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Objective : Ask for a secret number.\n",
+        "# Constraint: Use flag to manipulate program and define a secret number.\n",
+        "# Define a flag, secret number.\n",
+        "\n",
+        "state = True\n",
+        "secret_number = 10\n",
+        "\n",
+        "while state :\n",
+        "  user_number = int(input(\"Please write the secret number : \"))\n",
+        "  if user_number > secret_number :\n",
+        "    print( f\"Your number is more higher than the secret number\")\n",
+        "  elif user_number < secret_number:\n",
+        "    print( f\"Your number is more lower than the secret number\")\n",
+        "\n",
+        "  if user_number == secret_number:\n",
+        "    state = False\n",
+        "\n",
+        "print(\"Congratulations you win\")\n"
+      ],
       "metadata": {
-        "id": "a26x6Fld7h7t"
+        "id": "a26x6Fld7h7t",
+        "outputId": "4c0e23cc-d480-4883-c95f-4a00d06a8ecc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please write the secret number : 9\n",
+            "Your number is more lower than the secret number\n",
+            "Please write the secret number : 8\n",
+            "Your number is more lower than the secret number\n",
+            "Please write the secret number : 10\n",
+            "Congratulations you win\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -317,15 +520,6 @@
       "metadata": {
         "id": "KtLRZMCf7iZ6"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "NF-Pza0K7l0_"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -372,10 +566,25 @@
         "    print(\"Contraseña incorrecta, inténtalo de nuevo.\")"
       ],
       "metadata": {
-        "id": "SZ3NAl_D7r7O"
+        "id": "SZ3NAl_D7r7O",
+        "outputId": "df4543b1-e57b-4261-c932-165029c34e5a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduce la contraseña: 12\n",
+            "Contraseña incorrecta, inténtalo de nuevo.\n",
+            "Introduce la contraseña: 1234\n",
+            "Acceso concedido.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -391,19 +600,53 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Objective : Write a program which simulates a cashier\n",
+        "# Constraint : End the program when user write the correct pin.\n",
+        "# Actually I can use break to manipulate information flow.\n",
+        "\n",
+        "real_pin = 3023\n",
+        "while True :\n",
+        "  user_pin = int(input(\"Write your pin before getting money please : \"))\n",
+        "  if user_pin == real_pin :\n",
+        "    print (\"You've already got money \")\n",
+        "    break\n",
+        "  else:\n",
+        "    print (\"Please insert your correct pin\")\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "luLubC-j70yf"
+        "id": "luLubC-j70yf",
+        "outputId": "6506f58e-3cdd-4e53-fb75-2331f51f0f8c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Write your pin before getting money please : 123\n",
+            "Please insert your correct pin\n",
+            "Write your pin before getting money please : 153\n",
+            "Please insert your correct pin\n",
+            "Write your pin before getting money please : 3023\n",
+            "You've already got money \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
         "**Ejercicio 4.2.**\n",
         "\n",
-        "Implementa un sistema que detenga la ejecución de un ciclo al detectar un número primo.\n"
+        "Implementa un sistema que detenga la ejecución de un ciclo al detectar un número primo.\n",
+        "#Conditions\n",
+        "1. Random number.\n",
+        "2. Print number after every loop."
       ],
       "metadata": {
         "id": "OMwgGQtN71pn"
@@ -411,12 +654,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random\n",
+        "\n",
+        "number_random = 0\n",
+        "while True :\n",
+        "  number_random = random.randint(1,100)\n",
+        "  if number_random\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "lXAsluPh71FK"
+        "id": "lXAsluPh71FK",
+        "outputId": "ae32483a-ca41-46e1-dbf3-7fbdb9236c7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
