Se creó con Colab

--- a/Clase04/estructuras_repetitivas.ipynb
+++ b/Clase04/estructuras_repetitivas.ipynb
@@ -155,7 +155,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +216,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +278,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +389,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,7 +493,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +572,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -622,7 +622,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -635,6 +635,97 @@
             "Write your pin before getting money please : 3023\n",
             "You've already got money \n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "print(math.sqrt(67))\n",
+        "int(math.sqrt(23)+1)"
+      ],
+      "metadata": {
+        "id": "WLLFfu6W7PYk",
+        "outputId": "c1c6aa30-84dd-4699-ef20-5ab14692b9bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.18535277187245\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "import math\n",
+        "\n",
+        "\n",
+        "def is_prime(number):\n",
+        "    if number <= 1:\n",
+        "        return False\n",
+        "    for i in range(2, int(math.sqrt(number)) + 1):\n",
+        "        if number % i == 0:\n",
+        "            return False\n",
+        "    return True"
+      ],
+      "metadata": {
+        "id": "db77hVFt_CO3"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_number_one = random.randint(2,100)\n",
+        "print(random_number_one)\n",
+        "is_prime(random_number_one)"
+      ],
+      "metadata": {
+        "id": "bJz9Sjvy_EVv",
+        "outputId": "923f97c4-7943-4584-b5f7-f85c00064f7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "45\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
         }
       ]
     },
@@ -655,28 +746,47 @@
     {
       "cell_type": "code",
       "source": [
-        "import random\n",
+        "# Prime Number validation\n",
+        "# 1. Divisible between itself\n",
+        "# 2. It can't be divsible between other numbers. Use the Square.\n",
+        "# 3. I need to make the division between a range of number until we got\n",
+        "# the prime number.\n",
         "\n",
+        "\n",
+        "\n",
+        "import math\n",
+        "import random\n",
+        "flag = True\n",
         "number_random = 0\n",
-        "while True :\n",
-        "  number_random = random.randint(1,100)\n",
-        "  if number_random\n",
+        "while flag :\n",
+        "  number_random = random.randint(2,100)\n",
+        "  print(number_random,\"Random Number\")\n",
+        "  for i in range(2, int(math.sqrt(number_random))+1):\n",
+        "    if number_random % i == 0 :\n",
+        "      flag = True\n",
+        "    else:\n",
+        "      flag = False\n",
+        "\n",
+        "print(f\" The number {number_random} is prime\")\n",
         "\n"
       ],
       "metadata": {
         "id": "lXAsluPh71FK",
-        "outputId": "ae32483a-ca41-46e1-dbf3-7fbdb9236c7b",
+        "outputId": "3030e372-f95e-4a63-c9ac-bf6f90a253f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6\n"
+            "81 Random Number\n",
+            "63 Random Number\n",
+            "46 Random Number\n",
+            " The number 46 is prime\n"
           ]
         }
       ]
@@ -798,10 +908,24 @@
         "    print(\"El color es\", color)"
       ],
       "metadata": {
-        "id": "oQAKORFj8aol"
+        "id": "oQAKORFj8aol",
+        "outputId": "33b4612d-fa0e-4f82-a0cd-a3ad7be1d260",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El color es rojo\n",
+            "El color es verde\n",
+            "El color es azul\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -816,12 +940,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "names = [\"Carlos\",\"Juan\", \"Maritza\",\"Mamameli\"]\n",
+        "for name in names :\n",
+        "  print(name)"
+      ],
       "metadata": {
-        "id": "c9tmoekN8jco"
+        "id": "c9tmoekN8jco",
+        "outputId": "8f108f75-058d-4566-e3e5-ddfcdc45e95b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Carlos\n",
+            "Juan\n",
+            "Maritza\n",
+            "Mamameli\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -836,12 +979,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "vowels = \"aeiou\"\n",
+        "words = \"aefgasdwoqinasfu\"\n",
+        "\n",
+        "for vowel in vowels:\n",
+        "  for word in words:\n",
+        "    if word == vowel:\n",
+        "      print(word)\n",
+        ""
+      ],
       "metadata": {
-        "id": "cAbGJKPi8orn"
+        "id": "cAbGJKPi8orn",
+        "outputId": "55d0e081-55c5-4086-c56a-1755737b30c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "a\n",
+            "a\n",
+            "e\n",
+            "i\n",
+            "o\n",
+            "u\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -877,10 +1047,26 @@
         "    print(f\"Número: {i}\")"
       ],
       "metadata": {
-        "id": "cu5H61Fm8szL"
+        "id": "cu5H61Fm8szL",
+        "outputId": "8cc51832-6acd-4215-e337-6012451c4267",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Número: 1\n",
+            "Número: 2\n",
+            "Número: 3\n",
+            "Número: 4\n",
+            "Número: 5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -896,12 +1082,51 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for i in range(0,50,2):\n",
+        "  print(i)"
+      ],
       "metadata": {
-        "id": "doe0H_jb86Ij"
+        "id": "doe0H_jb86Ij",
+        "outputId": "5f499dd2-20b9-49e4-8c73-093262ba489a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n",
+            "10\n",
+            "12\n",
+            "14\n",
+            "16\n",
+            "18\n",
+            "20\n",
+            "22\n",
+            "24\n",
+            "26\n",
+            "28\n",
+            "30\n",
+            "32\n",
+            "34\n",
+            "36\n",
+            "38\n",
+            "40\n",
+            "42\n",
+            "44\n",
+            "46\n",
+            "48\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -917,12 +1142,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# obj . Sum 20 first natural numbers.\n",
+        "#constraints: Don't have one\n",
+        "# Use range to ask for them range(1,21)\n",
+        "# Use counter to store.\n",
+        "\n",
+        "counter = 0\n",
+        "for i in range(1,100):\n",
+        "  counter+=i\n",
+        "\n",
+        "print(counter)\n"
+      ],
       "metadata": {
-        "id": "go4Vvtnt87qz"
+        "id": "go4Vvtnt87qz",
+        "outputId": "059b7188-6af4-4f6e-8dd6-818008ab1af6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4950\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
